masternode fair payment system redux

--- a/src/qt/forms/masternodemanager.ui
+++ b/src/qt/forms/masternodemanager.ui
@@ -34,7 +34,7 @@
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>0</number>
+        <number>1</number>
        </property>
        <property name="movable">
         <bool>true</bool>
@@ -226,6 +226,11 @@
              <column>
               <property name="text">
                <string>Status</string>
+              </property>
+             </column>
+             <column>
+              <property name="text">
+               <string>Payments</string>
               </property>
              </column>
              <column>
